--- a/pluginHostSdkLib/src/main/res/values-mdpi/integers.xml
+++ b/pluginHostSdkLib/src/main/res/values-mdpi/integers.xml
@@ -2,7 +2,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- The maximum blurb length in characters.  This value is based on Latin characters. -->
-    <integer name="com_twofortyfouram_locale_sdk_host_maximum_blurb_length" tools:ignore="UnusedResources">50
-    </integer>
+    <integer name="com_twofortyfouram_locale_sdk_host_maximum_blurb_length" tools:ignore="UnusedResources">50</integer>
 
 </resources>
